--- a/maven-xbean-plugin/pom.xml
+++ b/maven-xbean-plugin/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <artifactId>xbean</artifactId>
         <groupId>org.apache.xbean</groupId>
-        <version>4.5</version>
+        <version>4.5-TT.1</version>
     </parent>
 
     <artifactId>maven-xbean-plugin</artifactId>
