--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <packaging>pom</packaging>
     <inceptionYear>2005</inceptionYear>
 
-    <version>4.5</version>
+    <version>4.5-TT.1</version>
 
     <description>
         XBean is a plugin based server architecture.
