--- a/xbean-asm5-shaded/pom.xml
+++ b/xbean-asm5-shaded/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>xbean</artifactId>
         <groupId>org.apache.xbean</groupId>
-        <version>4.5</version>
+        <version>4.5-TT.1</version>
     </parent>
     <artifactId>xbean-asm5-shaded</artifactId>
     <packaging>bundle</packaging>
