--- a/pom.xml
+++ b/pom.xml
@@ -385,6 +385,7 @@
                 <version>0.8</version>
                 <configuration>
                     <excludes>
+                        <exclude>.gitignore</exclude>
                         <exclude>.git/**/*</exclude>
                         <exclude>.idea/**/*</exclude>
                         <exclude>readme/**/*</exclude>
